<?xml version="1.0"?>

    <resources>

    <string name="app_name">AppListaCurso</string>

    <string name="titulo">Aplicativo Lista VIP Curso Android</string>

    <string name="nome_curso">Nome do curso desejado</string>

    <string name="nome">Nome</string>

    <string name="sobrenome">Sobrenome</string>

    <string name="telefone_contato">Telefone de contato</string>

    <string name="LIMPAR">LIMPAR</string>

    <string name="SALVAR">SALVAR</string>

    <string name="FINALIZAR">FINALIZAR</string>

</resources>