<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".MainActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.022" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.515" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold" android:textSize="18sp" android:text="@string/titulo" android:id="@+id/txtTitulo"/>

    <EditText android:layout_height="48dp" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editNome" app:layout_constraintTop_toBottomOf="@+id/txtTitulo" android:inputType="text" android:importantForAutofill="no" android:hint="@string/nome" android:ems="10" android:layout_margin="16dp"/>

    <EditText android:layout_height="48dp" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editSobrenome" app:layout_constraintTop_toBottomOf="@+id/editNome" android:inputType="text" android:importantForAutofill="no" android:hint="@string/sobrenome" android:ems="10" android:layout_margin="16dp"/>

    <EditText android:layout_height="48dp" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editTelefone" app:layout_constraintTop_toBottomOf="@+id/editTelefone2" android:inputType="text" android:importantForAutofill="no" android:hint="@string/telefone_contato" android:ems="10" android:layout_margin="16dp"/>

    <EditText android:layout_height="48dp" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.875" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editTelefone2" app:layout_constraintTop_toBottomOf="@+id/editSobrenome" android:inputType="text" android:importantForAutofill="no" android:hint="@string/nome_curso" android:ems="10" android:layout_margin="16dp" android:layout_marginTop="64dp"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.493" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" android:text="@string/LIMPAR" android:id="@+id/btnEnviar" app:layout_constraintTop_toBottomOf="@+id/editTelefone" app:layout_constraintEnd_toStartOf="@+id/btnSalvar" app:layout_constraintBottom_toTopOf="@+id/btnFinalizar" android:layout_marginStart="16dp"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.493" app:layout_constraintEnd_toEndOf="parent" android:text="@string/SALVAR" android:id="@+id/btnSalvar" app:layout_constraintTop_toBottomOf="@+id/editTelefone" app:layout_constraintBottom_toTopOf="@+id/btnFinalizar" android:layout_marginStart="173dp" app:layout_constraintStart_toEndOf="@+id/btnEnviar" android:layout_marginEnd="24dp"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" app:layout_constraintVertical_bias="0.324" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="@string/FINALIZAR" android:id="@+id/btnFinalizar" app:layout_constraintTop_toBottomOf="@+id/editTelefone" android:layout_margin="16dp" android:layout_marginBottom="252dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>